add Microsoft Tag

--- a/clrprofiler/clrprofiler.nuspec
+++ b/clrprofiler/clrprofiler.nuspec
@@ -14,7 +14,7 @@
     <projectSourceUrl>https://clrprofiler.codeplex.com/SourceControl/list/changesets?branch=master</projectSourceUrl>
     <docsUrl>https://clrprofiler.codeplex.com/documentation</docsUrl>
     <bugTrackerUrl>https://clrprofiler.codeplex.com/workitem/list/basic</bugTrackerUrl>
-    <tags>clrprofiler</tags>
+    <tags>clrprofiler Microsoft</tags>
     <licenseUrl>https://clrprofiler.codeplex.com/license</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <iconUrl>https://download-codeplex.sec.s-msft.com/Download?ProjectName=clrprofiler&amp;DownloadId=532803&amp;Build=21031</iconUrl>
